--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>It`s my personal site for my prototyping html pages</h1>
     <p>You can see some pages</p>
     <ul>
-      <li><a href="./smpl/sample-1.html"></a>Sample 1</li>
-      <li><a href="./smpl/sample-2.html"></a>Sample 2</li>
+      <li><a href="./smpl/sample-1.html">Sample 1</a></li>
+      <li><a href="./smpl/sample-2.html">Sample 2</a></li>
     </ul>
   </body>
 </html>
