add new image and homepage urls

--- a/smpl/sample-1.html
+++ b/smpl/sample-1.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="./">.svg photo</a>
+        <a href="./prototyping/smpl/sample-1.html">.svg photo</a>
         <ul>
           <li><a href="">Features</a></li>
           <li><a href="">Pricing</a></li>
@@ -84,7 +84,12 @@
         <ul>
           <li>
             <a href="">
-              <img src="./img/rectangle.png" alt="" width="750" height="440" />
+              <img
+                src="./prototyping/img/rectangle.png"
+                alt=""
+                width="750"
+                height="440"
+              />
               <h3>Sed ut perspiciatis unde omnis</h3>
               <p>
                 Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
@@ -96,7 +101,12 @@
           </li>
           <li>
             <a href="">
-              <img src="./img/rectangle.png" alt="" width="750" height="440" />
+              <img
+                src="./prototyping/img/rectangle.png"
+                alt=""
+                width="750"
+                height="440"
+              />
               <h3>Sed ut perspiciatis unde omnis</h3>
               <p>
                 Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
