--- a/smpl/sample-1.html
+++ b/smpl/sample-1.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="./prototyping/smpl/sample-1.html">.svg photo</a>
+        <a href="./">.svg photo</a>
         <ul>
           <li><a href="">Features</a></li>
           <li><a href="">Pricing</a></li>
@@ -129,42 +129,77 @@
         <ul>
           <li>
             <a href="">
-              <img src="./img/rectangle.png" alt="" width="173" height="76" />
+              <img
+                src="./prototyping/img/rectangle.png"
+                alt=""
+                width="173"
+                height="76"
+              />
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./img/rectangle.png" alt="" width="173" height="76" />
+              <img
+                src="./prototyping/img/rectangle.png"
+                alt=""
+                width="173"
+                height="76"
+              />
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./img/rectangle.png" alt="" width="173" height="76" />
+              <img
+                src="./prototyping/img/rectangle.png"
+                alt=""
+                width="173"
+                height="76"
+              />
             </a>
           </li>
           <li>
             <a href=""
-              ><img src="./img/rectangle.png" alt="" width="173" height="76"
+              ><img
+                src="./prototyping/img/rectangle.png"
+                alt=""
+                width="173"
+                height="76"
             /></a>
           </li>
           <li>
             <a href=""
-              ><img src="./img/rectangle.png" alt="" width="173" height="76"
+              ><img
+                src="./prototyping/img/rectangle.png"
+                alt=""
+                width="173"
+                height="76"
             /></a>
           </li>
           <li>
             <a href=""
-              ><img src="./img/rectangle.png" alt="" width="173" height="76"
+              ><img
+                src="./prototyping/img/rectangle.png"
+                alt=""
+                width="173"
+                height="76"
             /></a>
           </li>
           <li>
             <a href=""
-              ><img src="./img/rectangle.png" alt="" width="173" height="76"
+              ><img
+                src="./prototyping/img/rectangle.png"
+                alt=""
+                width="173"
+                height="76"
             /></a>
           </li>
           <li>
             <a href=""
-              ><img src="./img/rectangle.png" alt="" width="173" height="76"
+              ><img
+                src="./prototyping/img/rectangle.png"
+                alt=""
+                width="173"
+                height="76"
             /></a>
           </li>
         </ul>
