--- a/smpl/sample-1.html
+++ b/smpl/sample-1.html
@@ -84,12 +84,7 @@
         <ul>
           <li>
             <a href="">
-              <img
-                src="./prototyping/img/rectangle.png"
-                alt=""
-                width="750"
-                height="440"
-              />
+              <img src="../img/rectangle.png" alt="" width="750" height="440" />
               <h3>Sed ut perspiciatis unde omnis</h3>
               <p>
                 Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
@@ -101,12 +96,7 @@
           </li>
           <li>
             <a href="">
-              <img
-                src="./prototyping/img/rectangle.png"
-                alt=""
-                width="750"
-                height="440"
-              />
+              <img src="../img/rectangle.png" alt="" width="750" height="440" />
               <h3>Sed ut perspiciatis unde omnis</h3>
               <p>
                 Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
@@ -129,77 +119,42 @@
         <ul>
           <li>
             <a href="">
-              <img
-                src="./prototyping/img/rectangle.png"
-                alt=""
-                width="173"
-                height="76"
-              />
+              <img src="../img/rectangle.png" alt="" width="173" height="76" />
             </a>
           </li>
           <li>
             <a href="">
-              <img
-                src="./prototyping/img/rectangle.png"
-                alt=""
-                width="173"
-                height="76"
-              />
+              <img src="../img/rectangle.png" alt="" width="173" height="76" />
             </a>
           </li>
           <li>
             <a href="">
-              <img
-                src="./prototyping/img/rectangle.png"
-                alt=""
-                width="173"
-                height="76"
-              />
+              <img src="../img/rectangle.png" alt="" width="173" height="76" />
             </a>
           </li>
           <li>
             <a href=""
-              ><img
-                src="./prototyping/img/rectangle.png"
-                alt=""
-                width="173"
-                height="76"
+              ><img src="../img/rectangle.png" alt="" width="173" height="76"
             /></a>
           </li>
           <li>
             <a href=""
-              ><img
-                src="./prototyping/img/rectangle.png"
-                alt=""
-                width="173"
-                height="76"
+              ><img src="../img/rectangle.png" alt="" width="173" height="76"
             /></a>
           </li>
           <li>
             <a href=""
-              ><img
-                src="./prototyping/img/rectangle.png"
-                alt=""
-                width="173"
-                height="76"
+              ><img src="../img/rectangle.png" alt="" width="173" height="76"
             /></a>
           </li>
           <li>
             <a href=""
-              ><img
-                src="./prototyping/img/rectangle.png"
-                alt=""
-                width="173"
-                height="76"
+              ><img src="../img/rectangle.png" alt="" width="173" height="76"
             /></a>
           </li>
           <li>
             <a href=""
-              ><img
-                src="./prototyping/img/rectangle.png"
-                alt=""
-                width="173"
-                height="76"
+              ><img src="../img/rectangle.png" alt="" width="173" height="76"
             /></a>
           </li>
         </ul>
