adds section until [Facts]

--- a/smpl/sample-2.html
+++ b/smpl/sample-2.html
@@ -1,1 +1,227 @@
-<!-- sample for prototyping  -->
+<!-- sample for prototyping https://all-psd.ru/site-templates/5221-SHablon_sayta_s_yarkoy_shapkoy.html -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Amethyst</title>
+  </head>
+  <body>
+    <header>
+      <!-- main menu -->
+      <ul>
+        <li><a href="" aria-label="link to Facebook"></a></li>
+        <li><a href="" aria-label="link to LinkedIn"></a></li>
+        <li><a href="" aria-label="link to Twitter"></a></li>
+        <li><a href="" aria-label="link to Google+"></a></li>
+      </ul>
+
+      <ul>
+        <li><a href="mailto:info@example.com">E-mail: info@example.com</a></li>
+        <li><a href="tel:+0012345678">Phone: +00 123 456 78</a></li>
+      </ul>
+
+      <a href=""><h1>Amethyst</h1></a>
+
+      <ul>
+        <li><a href="">About</a></li>
+        <li><a href="">Works</a></li>
+        <li><a href="">Features</a></li>
+        <li><a href="">Team</a></li>
+        <li><a href="">Prices</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+    </header>
+
+    <!-- hero -->
+    <section>
+      <h2>Amethyst</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+      <p>
+        Nam auctor arcu ut efficitur blandit. Ut posuere dolor nunc, vitae
+        eleifend est ornare in. Suspendisse luctus scelerisque condimentum. Nam
+        a dui non libero vestibulum convallis sit amet quis lectus. Nam interdum
+        condimentum est, vel varius lorem tincidunt vel.
+      </p>
+      <a href="">View more</a>
+    </section>
+
+    <!-- About -->
+    <section>
+      <h2>About us</h2>
+      <p>
+        Aliquam dapibus massa diam, eu porta ipsum mollis vel. Etiam blandit
+        auctor porta.
+      </p>
+      <p>
+        Phasellus eu malesuada neque, ut scelerisque nisl. Sed laoreet libero
+        eget orci lobortis, convallis mattis metus porttitor. Nunc tempor nunc
+        ac urna tincidunt, quis placerat nisl suscipit. Mauris viverra gravida
+        metus, ac auctor purus convallis in.
+      </p>
+      <ol>
+        <li>
+          <h3>Lorem ipsum</h3>
+          <p>
+            Ut porttitor quam nec risus ultricies efficitur. Pellentesque
+            sagittis sed magna scelerisque consectetur.
+          </p>
+        </li>
+        <li>
+          <h3>Lorem ipsum</h3>
+          <p>
+            Ut porttitor quam nec risus ultricies efficitur. Pellentesque
+            sagittis sed magna scelerisque consectetur.
+          </p>
+        </li>
+        <li>
+          <h3>Lorem ipsum</h3>
+          <p>
+            Ut porttitor quam nec risus ultricies efficitur. Pellentesque
+            sagittis sed magna scelerisque consectetur.
+          </p>
+        </li>
+      </ol>
+      <a href="">Download</a>
+    </section>
+
+    <!-- Works -->
+    <section>
+      <h2>Works</h2>
+      <p>
+        Aliquam dapibus massa diam, eu porta ipsum mollis vel. Etiam blandit
+        auctor
+      </p>
+      <ul>
+        <li>All</li>
+        <li>Design</li>
+        <li>Urban</li>
+        <li>Posters</li>
+      </ul>
+      <h3>Lorem Ipsum</h3>
+      <p>
+        Morbi commodo, nisl id euismod commodo, mauris felis aliquam erat, id
+        dapibus magna eros sed ligula. In feugiat id odio ac feugiat.
+      </p>
+    </section>
+
+    <!-- Benfits -->
+    <section>
+      <!-- hide h2 -->
+      <h2>Benfits</h2>
+      <ul>
+        <li>
+          <h3>Lorem Ipsum</h3>
+          <p>
+            Morbi commodo, nisl id euismod commodo, mauris felis aliquam erat,
+            id dapibus magna eros sed ligula. In feugiat id odio ac feugiat.
+          </p>
+        </li>
+        <li>
+          <h3>Lorem Ipsum</h3>
+          <p>
+            Morbi commodo, nisl id euismod commodo, mauris felis aliquam erat,
+            id dapibus magna eros sed ligula. In feugiat id odio ac feugiat.
+          </p>
+        </li>
+        <li>
+          <h3>Lorem Ipsum</h3>
+          <p>
+            Morbi commodo, nisl id euismod commodo, mauris felis aliquam erat,
+            id dapibus magna eros sed ligula. In feugiat id odio ac feugiat.
+          </p>
+        </li>
+        <li>
+          <h3>Lorem Ipsum</h3>
+          <p>
+            Morbi commodo, nisl id euismod commodo, mauris felis aliquam erat,
+            id dapibus magna eros sed ligula. In feugiat id odio ac feugiat.
+          </p>
+        </li>
+      </ul>
+    </section>
+
+    <!-- Testimonials -->
+    <section>
+      <h2>Testimonials</h2>
+      <p></p>
+      <p></p>
+      <ul>
+        <li>
+          <img src="" alt="" width="120" height="120" />
+          <h3>Jake Peterson</h3>
+          <p>Product Designer</p>
+        </li>
+      </ul>
+    </section>
+
+    <!-- Partners -->
+    <section>
+      <!-- hide h2 -->
+      <h2>Partners</h2>
+      <ul>
+        <li>
+          <a href="" target="_blank">
+            <img
+              src="../img/company-logo-1.png"
+              alt="company 1"
+              width=""
+              height="110"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="" target="_blank">
+            <img
+              src="../img/company-logo-2.png"
+              alt="company 2"
+              width=""
+              height="110"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="" target="_blank">
+            <img
+              src="../img/company-logo-3.png"
+              alt="company 3"
+              width=""
+              height="110"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="" target="_blank">
+            <img
+              src="../img/company-logo-4.png"
+              alt="company 4"
+              width=""
+              height="110"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="" target="_blank">
+            <img
+              src="../img/company-logo-5.png"
+              alt="company 5"
+              width=""
+              height="110"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="" target="_blank">
+            <img
+              src="../img/company-logo-6.png"
+              alt="company 6"
+              width=""
+              height="110"
+            />
+          </a>
+        </li>
+      </ul>
+    </section>
+  </body>
+</html>
