add [Samples table]

--- a/index.html
+++ b/index.html
@@ -8,9 +8,37 @@
   <body>
     <h1>It`s my personal site for my prototyping html pages</h1>
     <p>You can see some pages</p>
-    <ul>
-      <li><a href="./smpl/sample-1.html">Sample 1</a></li>
-      <li><a href="./smpl/sample-2.html">Sample 2</a></li>
-    </ul>
+    <table>
+      <caption>
+        Samples table
+      </caption>
+      <thead>
+        <tr>
+          <th>title</th>
+          <th>source</th>
+        </tr>
+        <tr>
+          <td><a href="./smpl/sample-1.html">Sample page 1</a></td>
+          <td>
+            <a
+              href="https://www.figma.com/file/rWzutuk48dEymobNaqMDY2/Wireframing-in-Figma?node-id=0%3A817"
+            >
+              link
+            </a>
+          </td>
+        </tr>
+        <tr>
+          <td><a href="./smpl/sample-1.html">Sample page 2</a></td>
+          <td>
+            <a
+              href="https://all-psd.ru/site-templates/5221-SHablon_sayta_s_yarkoy_shapkoy.html"
+            >
+              link
+            </a>
+          </td>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
   </body>
 </html>
