--- a/index.html
+++ b/index.html
@@ -18,20 +18,30 @@
           <th>source</th>
         </tr>
         <tr>
-          <td><a href="./smpl/sample-1.html">Sample page 1</a></td>
+          <td>
+            <a href="./smpl/sample-1.html" target="_blank">
+              Sample page 1
+            </a>
+          </td>
           <td>
             <a
               href="https://www.figma.com/file/rWzutuk48dEymobNaqMDY2/Wireframing-in-Figma?node-id=0%3A817"
+              target="_blank"
             >
               link
             </a>
           </td>
         </tr>
         <tr>
-          <td><a href="./smpl/sample-1.html">Sample page 2</a></td>
+          <td>
+            <a href="./smpl/sample-1.html" target="_blank">
+              Sample page 2
+            </a>
+          </td>
           <td>
             <a
               href="https://all-psd.ru/site-templates/5221-SHablon_sayta_s_yarkoy_shapkoy.html"
+              target="_blank"
             >
               link
             </a>
