--- a/smpl/sample-2.html
+++ b/smpl/sample-2.html
@@ -223,5 +223,38 @@
         </li>
       </ul>
     </section>
+
+    <!-- Facts -->
+    <section>
+      <h2>Here's some interesting facts about our company.</h2>
+      <p>Lorem ipsum dolor sit amet, id iusto oportere mel.</p>
+      <ul>
+        <li>
+          <p>1258</p>
+          <p>Cups of coffee</p>
+        </li>
+        <li>
+          <p>63</p>
+          <p>New clients</p>
+        </li>
+        <li>
+          <p>421</p>
+          <p>Completed projects</p>
+        </li>
+        <li>
+          <p>562</p>
+          <p>Happy clients</p>
+        </li>
+      </ul>
+    </section>
+
+    <!-- Quotes -->
+    <section>
+      <p>
+        Design is not just what it looks like and feels like. <br />
+        Design is how it works.
+      </p>
+      <p>Steve Jobs</p>
+    </section>
   </body>
 </html>
