--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="wrapper">
       <header class="conteiner">
-        <p>hi dear frend! My name is</p>
+        <p><strong>hi dear frend!</strong> My name is</p>
         <h1>
           <a href="./index.html" class="name">Denys Kravchuk</a>
         </h1>
