додає розділ Технології

--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
         <!-- about me -->
         <section>
           <h2 id="02">About me</h2>
+          <h3>Technology</h3>
+          <label>
+            input Technology
+            <input type="text" id="filter" />
+          </label>
+
+          <ul class="js-list"></ul>
         </section>
       </main>
 
@@ -90,9 +97,7 @@
         <section>
           <h2 id="03">Contacts</h2>
         </section>
-        <address>
-          Ukrain, Ternopil
-        </address>
+        <address>Ukrain, Ternopil</address>
         <ul>
           <li>
             <a
@@ -127,5 +132,8 @@
         </p>
       </footer>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
+    <script src="./js/main.js" type="module"></script>
   </body>
 </html>
